--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "angular": "^1.6.1",
     "angular-animate": "^1.6.1",
+    "angular-bootstrap-lightbox": "^0.12.0",
     "angular-ui-router": "^0.3.2",
     "bootstrap": "^3.3.7",
     "ng-file-upload": "^12.2.13",
